fix: make sure placeholder values are fully visible

--- a/src/app.css
+++ b/src/app.css
@@ -65,6 +65,10 @@
     body {
         @apply bg-primary font-EireneSans text-primary;
     }
+
+    *::placeholder {
+        @apply overflow-visible;
+    }
 }
 
 @layer utilities {
